[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-notification-hub-unofficial"
version = "0.1.0"
description = "Python SDK for Azure Notification Hubs — send push notifications to Apple, FCM, Windows, ADM, Baidu, Browser, Xiaomi, and Template. Ports the official Node.js SDK."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Utkarsh Jaiswal", email = "utkarshjaiswal2580@gmail.com" },
]
keywords = [
    "azure",
    "notification-hubs",
    "push-notifications",
    "apns",
    "fcm",
    "wns",
    "web-push",
    "baidu",
    "adm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/asliutkarsh/azure-notification-hub-unofficial-sdk"
Documentation = "https://github.com/asliutkarsh/azure-notification-hub-unofficial-sdk#readme"
Repository = "https://github.com/asliutkarsh/azure-notification-hub-unofficial-sdk"
Issues = "https://github.com/asliutkarsh/azure-notification-hub-unofficial-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["azure_notification_hub"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
